# BrainGraph

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
braingraph/: __init__.py  config.py  diagnostics.py  integrations.py  reporting.py  service.py  summarizer.py
braingraph/cli/: main.py
braingraph/database/: models.py  repository.py  session.py
braingraph/graph_engine/: __init__.py  builder.py
braingraph/memory/: __init__.py  chunker.py  retriever.py  vector_store.py
braingraph/parser/: __init__.py  engine.py  scanner.py  types.py  utils.py
braingraph/watcher/: __init__.py  watch.py
docs/: architecture.md
smoke-check/: login.tsx
tests/: conftest.py  test_cli.py  test_memory.py  test_parser.py  test_repository.py  test_service.py
